	* client/gtk/gui.c, server/gtk/gnocatan-server-gtk.c: Fix for crash in
	about dialog. Also reintroduces the version number.
	* client/gtk/gui.c, client/gtk/guimap.c, client/gtk/guimap.h,
	client/gtk/theme.c, client/gtk/theme.h,
	server/gtk/gnocatan-server-gtk.c: Theme.c rewrite, using
	g_build_filename instead of gnome_program_locate_file.
	* client/gtk/trade.c: Fixed a memory leak.
	
2005-01-25  0.8.1.51  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/common_gtk.c: Added stub for gtk_alignment_set_padding,
	allowing to code to build with Gtk+-2.0 and 2.2 again.
	* client/gtk/gold.c(gold_choose_player_must): Replaced the last Gtk+
	deprecated funcion call in this file.

2005-01-25  Stefan Walter <sw@gegenunendlich.de>
	* common/network.c, meta-server/gnocatan-meta-server.c,
	server/server.c: Restored the include files needed for FreeBSD that
	disappeared in 0.8.1.48
	
2005-01-23  0.8.1.50  Roland Clobus <rclobus@bigfoot.com>
	* client/common/client.c: Removed unused variables from
	recovery_info_t, does not show turn 0 anymore.
	* common/map.c: Added default case
	* common/state.c, common/state.h, server/gold.c, server/pregame.c,
	server/server.h: Fixed reconnect during distribution of gold. 
	* client/common/client.c, client/common/client.h,
	client/common/develop.c: Removed unused function road_building_begin.
	* client/gtk/gold.c, client/gtk/resource-table.c,
	client/gtk/resource-table.h: Replaced gtk_clist.
	* server/player.c, server/pregame.c, server/server.h: Server crashed
	when the player who is in the setup phase reconnected with another
	name.

2005-01-15  Roland Clobus <rclobus@bigfoot.com>
	* INSTALL, .cvsignore: Removed INSTALL from CVS. It is generated
	* README: Added information from the old INSTALL
	
2005-01-15  0.8.1.49  Daniel <dgun@umpire.com>
	* common/map.c, common/map.h: Patch #1100340: Added the option to mark
	a tile such that it will never be shuffled, by adding a + (plus) after