@@ -6,6 +6,9 @@
 	server/gtk/gnocatan-server-gtk.c: Theme.c rewrite, using
 	g_build_filename instead of gnome_program_locate_file.
 	* client/gtk/trade.c: Fixed a memory leak.
+	* common/game.c, common/game.h, common/map.c,
+	server/gnocatan-server.c, server/gnocatan-server.h: Server will not
+	crash on invalid/unreadable games.
 	
 2005-01-25  0.8.1.51  Roland Clobus <rclobus@bigfoot.com>
 	* common/gtk/common_gtk.c: Added stub for gtk_alignment_set_padding,
